@@ -1,3 +1,7 @@
+2016-07-23  Markus Gans  <guru.mail@muenster.de>
+	* Add a modifier key correction for the linux tty
+	* Support to read meta+enter from keyboard
+
 2016-07-16  Markus Gans  <guru.mail@muenster.de>
 	* Support to read meta+tab from keyboard
 
